fixed line break in header at 480px

--- a/styles/sass/_media-queries.scss
+++ b/styles/sass/_media-queries.scss
@@ -91,6 +91,9 @@
 }
 
 @media (max-width: 480px) {
+	.current-day-container-stats {
+		padding: 15px;
+	}
 
 	main {
 		.weekly-weather-container {
