--- a/styles/styles.css
+++ b/styles/styles.css
@@ -709,6 +709,9 @@ footer a:hover, footer a:focus {
 }
 
 @media (max-width: 480px) {
+  .current-day-container-stats {
+    padding: 15px;
+  }
   main .weekly-weather-container {
     -webkit-box-pack: space-evenly;
         -ms-flex-pack: space-evenly;
